dia-1/lab02/app01/v2/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app01-v2-deployment
  labels:
    app: app01-v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app01-v2
  template:
    metadata:
      labels:
        app: app01-v2
    spec:
      containers:
      - name: app01-v2
        image: public.ecr.aws/l8p4i2g8/secomp-app01:v02
        ports:
        - containerPort: 5000
        resources:
          requests:
            cpu: '20m'
            memory: '100Mi'
          limits:
            cpu: '20m'
            memory: '100Mi'
