dia-1/lab02/app01/v2/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: app01-v2-service
spec:
  selector:
    app: app01-v2
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
